# Cookie-Learner

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  main.py  pyproject.toml
cookieClickerCode/: minigameMarket.js
cookieLearner/market/: README.md  TODO.md  market.py
tests/: .gitkeep
